--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.4",
     "clsx": "^1.1.1",
+    "docusaurus-gtm-plugin": "^0.0.2",
     "docusaurus-plugin-remote-content": "^3.1.0",
     "postcss": "^8.4.12",
     "prism-react-renderer": "^1.3.1",
