--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.1.1",
     "docusaurus-gtm-plugin": "^0.0.2",
     "docusaurus-plugin-remote-content": "^3.1.0",
+    "mermaid": "^9.1.1",
     "postcss": "^8.4.12",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
