--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/core": "2.0.0-beta.18",
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
+    "@react-aria/tooltip": "^3.2.0",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.4",
     "clsx": "^1.1.1",
