--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.1",
     "tailwind-component-classes": "^2.0.4",
     "tailwindcss": "^3.0.24"
   },
