--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.1.1",
     "docusaurus-gtm-plugin": "^0.0.2",
     "docusaurus-plugin-remote-content": "^3.1.0",
+    "front-matter": "^4.0.2",
     "mermaid": "^9.1.1",
     "postcss": "^8.4.12",
     "prism-react-renderer": "^1.3.1",
@@ -63,7 +64,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "raw-loader": "^4.0.2"
   },
   "resolutions": {
     "webpack": "^5"
