--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,6 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+angiejones:
+  name: Angie Jones
