Mic first blog on wasm and chatgpt

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -19,6 +19,9 @@ slorber:
 angiejones:
   name: Angie Jones
 
+michaelneale:
+  name: Mic Neale  
+
 tbdevelopers:
   name: TBDevelopers
   title: The TBD Development Team
