--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.10.1",
+    "redocusaurus": "^1.4.0",
     "tailwind-component-classes": "^2.0.4",
     "tailwindcss": "^3.0.24"
   },
@@ -59,11 +60,14 @@
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
     "babel-loader": "^8.2.5",
+    "docusaurus-plugin-typedoc": "^0.18.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "typedoc": "^0.23.24",
+    "typedoc-plugin-markdown": "^3.14.0"
   },
   "resolutions": {
     "webpack": "^5"
