--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {
     "@docusaurus/core": "2.3.1",
     "@docusaurus/preset-classic": "2.3.1",
-    "@react-aria/tooltip": "^3.2.0",
     "@mdx-js/react": "^1.6.22",
+    "@react-aria/tooltip": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
     "docusaurus-tailwindcss": "^0.1.0",
@@ -26,10 +26,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.11.2",
-    "redocusaurus": "^1.5.1"
+    "redocusaurus": "^1.5.1",
+    "tailwind-component-classes": "^2.0.4"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1"
+    "@docusaurus/module-type-aliases": "2.3.1",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "browserslist": {
     "production": [
