--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.11.2",
     "redocusaurus": "^1.5.1",
-    "tailwind-component-classes": "^2.0.4"
+    "tailwind-component-classes": "^2.0.4",
+    "tailwindcss": "^3.0.24",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1",
-    "@tailwindcss/typography": "^0.5.9"
+    "@docusaurus/module-type-aliases": "2.3.1"
   },
   "browserslist": {
     "production": [
