--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
     "@react-aria/tooltip": "^3.2.0",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-remote-content": "^3.1.0",
     "docusaurus-tailwindcss": "^0.1.0",
     "postcss": "^8.4.21",
     "prism-react-renderer": "^1.3.5",
@@ -28,8 +30,7 @@
     "react-player": "^2.11.2",
     "redocusaurus": "^1.5.1",
     "tailwind-component-classes": "^2.0.4",
-    "tailwindcss": "^3.0.24",
-    "@tailwindcss/typography": "^0.5.9"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1"
