--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@docusaurus/core": "2.3.1",
     "@docusaurus/preset-classic": "2.3.1",
+    "@docusaurus/plugin-content-docs": "2.3.1",
     "@mdx-js/react": "^1.6.22",
     "@react-aria/tooltip": "^3.2.0",
     "@tailwindcss/typography": "^0.5.9",
