--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
-    "@docusaurus/plugin-content-docs": "2.3.1",
-    "@docusaurus/utils": "2.3.1",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/plugin-content-docs": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
+    "@docusaurus/utils": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "@react-aria/tooltip": "^3.2.0",
     "@tailwindcss/typography": "^0.5.9",
@@ -36,7 +36,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1"
+    "@docusaurus/module-type-aliases": "^2.4.0"
   },
   "browserslist": {
     "production": [
@@ -51,6 +51,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.15"
   }
 }
