--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.0",
-    "@docusaurus/plugin-content-docs": "^2.4.0",
-    "@docusaurus/preset-classic": "^2.4.0",
-    "@docusaurus/utils": "^2.4.0",
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
     "@mdx-js/react": "^1.6.22",
     "@react-aria/tooltip": "^3.2.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@tbd54566975/web5": "0.4.0-unstable.bb8a252-2023.4.06-03-16-57",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
     "docusaurus-plugin-remote-content": "^3.1.0",
@@ -33,7 +32,7 @@
     "react-player": "^2.11.2",
     "redocusaurus": "^1.5.1",
     "tailwind-component-classes": "^2.0.4",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.0"
