redirect for Web5 pdf

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [[redirects]]
-  from = "/docs/tutorials/issue-verifiable-credential-manually"
-  to = "/blog/issue-verifiable-credential-manually"
+from = "/docs/tutorials/issue-verifiable-credential-manually"
+to = "/blog/issue-verifiable-credential-manually"
 
 [[redirects]]
 from = "/code-of-conduct"
 to = "/open-source/code-of-conduct"
+
+[[redirects]]
+from = "/docs/Decentralized%20Web%20Platform%20-%20Public.pdf"
+to = "/files/Decentralized-Web-Platform.pdf"
