--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@docusaurus/theme-common": "2.4.1",
+    "@docusaurus/types": "^2.4.1",
     "@docusaurus/utils": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
     "@react-aria/ssr": "^3.6.0",
