--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "start": "pnpm --filter docs run start",
     "start:todo-tutorial": "pnpm --filter todo-app-tutorial run dev",
     "start:filter-todo": "pnpm --filter todolist-v1-web5-js run dev",
-    "build": "pnpm --filter docs run build"
+    "build": "pnpm --filter docs run build",
+    "update:web5": "pnpm recursive add @tbd54566975/web5@latest"
+  },
+  "dependencies": {
+    "@tbd54566975/web5": "0.7.10"
   }
 }
