--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "start": "pnpm --filter docs run start",
     "start:todo-tutorial": "pnpm --filter todo-app-tutorial run dev",
     "start:filter-todo": "pnpm --filter todolist-v1-web5-js run dev",
-    "build": "pnpm --filter docs run build",
-    "update:web5": "pnpm recursive add @tbd54566975/web5@latest"
+    "build": "pnpm --filter docs run build"
   },
   "dependencies": {
-    "@tbd54566975/web5": "0.7.9"
+    "@tbd54566975/web5": "0.7.10"
   }
 }
