--- a/site/package.json
+++ b/site/package.json
@@ -29,6 +29,7 @@
     "clsx": "^1.2.1",
     "docusaurus-plugin-remote-content": "^3.1.0",
     "docusaurus-tailwindcss": "^0.1.0",
+    "dotenv": "^16.3.1",
     "gh": "^2.8.9",
     "postcss": "^8.4.21",
     "prism-react-renderer": "^1.3.5",
