--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "start": "pnpm --filter docs run start",
-    "start:todo-tutorial": "pnpm --filter todo-app-tutorial run dev",
-    "start:filter-todo": "pnpm --filter todolist-v1-web5-js run dev",
+    "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
+    "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
     "build": "pnpm --filter docs run build"
   },
   "dependencies": {
