--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "pnpm --filter site run start",
     "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
     "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
+    "start:widget": "pnpm --filter web5-quickstart-widgets start",
     "build": "pnpm --filter site run build",
     "clear": "pnpm --filter site run clear"
   },
