--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "developer-tbd-website",
+  "name": "site",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,16 +14,22 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.0",
-    "@docusaurus/preset-classic": "2.4.0",
+    "@docusaurus/core": "2.4.1",
+    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/theme-common": "2.4.1",
+    "@docusaurus/types": "^2.4.1",
+    "@docusaurus/utils": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "@react-aria/ssr": "^3.6.0",
     "@react-aria/tooltip": "^3.2.0",
+    "@react-aria/utils": "^3.17.0",
+    "@react-stately/tooltip": "^3.4.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@tbd54566975/web5": "0.7.9",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
     "docusaurus-plugin-remote-content": "^3.1.0",
     "docusaurus-tailwindcss": "^0.1.0",
+    "dotenv": "^16.3.1",
     "gh": "^2.8.9",
     "postcss": "^8.4.21",
     "prism-react-renderer": "^1.3.5",
@@ -35,7 +41,8 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.0"
+    "@docusaurus/module-type-aliases": "^2.4.0",
+    "prop-types": "^15.8.1"
   },
   "browserslist": {
     "production": [
