--- a/site/package.json
+++ b/site/package.json
@@ -35,6 +35,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.7",
     "react-player": "^2.11.2",
     "redocusaurus": "^1.5.1",
     "tailwind-component-classes": "^2.0.4",
