Fixing template for use case

--- a/.github/ISSUE_TEMPLATE/usecase.yaml
+++ b/.github/ISSUE_TEMPLATE/usecase.yaml
@@ -1,5 +1,5 @@
-name: Use Case Proposal for developer.tbd.website
-description: 
+name: Use Case Proposal
+description: Proposal for a new use case to be delivered and documented on developer.tbd.website
 title: "[USE CASE]: "
 labels:
   - "triage"
