insanity with jest

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
     "build": "pnpm --filter site run build",
-    "clear": "pnpm --filter site run clear"
+    "clear": "pnpm --filter site run clear",
+    "test": "jest"
   },
   "dependencies": {
     "@tbd54566975/web5": "0.7.11"
