Update CODEOWNERS to include Angie
* For incoming PR awareness as discussed in Discord:

https://discord.com/channels/937858703112155166/949067751803191397/1133646768018575441

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,6 +10,7 @@
 
 # These owners will be the default owners for everything in the repo.
 *       @dayhaysoos
+*       @angiejones
 
 
 # -----------------------------------------------
