--- a/package.json
+++ b/package.json
@@ -7,27 +7,9 @@
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
     "build": "pnpm --filter site run build",
     "clear": "pnpm --filter site run clear",
-    "test": "jest"
+    "test": "pnpm --filter site run test"
   },
   "dependencies": {
-    "@ipld/dag-cbor": "^9.0.3",
     "@tbd54566975/web5": "0.7.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-flow": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@testing-library/react": "^14.0.0",
-    "babel-jest": "^29.6.1",
-    "browser-resolve": "^2.0.0",
-    "fake-indexeddb": "^4.0.1",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
-    "jest-environment-node": "^29.6.1",
-    "jest-resolve": "^29.6.1",
-    "node-fetch": "^3.3.1"
   }
 }
