--- a/site/package.json
+++ b/site/package.json
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "test": "vitest"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.1",
@@ -41,8 +42,9 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.0",
-    "prop-types": "^15.8.1"
+    "@docusaurus/module-type-aliases": "^2.4.1",
+    "prop-types": "^15.8.1",
+    "vitest": "^0.33.0"
   },
   "browserslist": {
     "production": [
