--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tbd54566975/web5": "0.7.11"
   },
   "devDependencies": {
-    "vitest": "^0.33.0"
+    "@vitest/browser": "^0.33.0",
+    "vitest": "^0.33.0",
+    "webdriverio": "^8.13.13"
   }
 }
