--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitest/browser": "^0.33.0",
+    "@vitest/coverage-istanbul": "^0.33.0",
     "fake-indexeddb": "^4.0.2",
     "vitest": "^0.33.0",
     "webdriverio": "^8.13.13"
