--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tbd54566975/web5": "0.7.11"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "4.2.3",
     "@vitest/browser": "^0.33.0",
     "@vitest/coverage-istanbul": "^0.33.0",
     "fake-indexeddb": "^4.0.2",
