--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
     "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
-    "build": "pnpm --filter site run build",
+    "build": "pnpm test && pnpm --filter site run build",
     "clear": "pnpm --filter site run clear",
-    "test": "pnpm vitest --config vite.config.ts"
+    "test": "pnpm vitest run --config vite.config.ts "
   },
   "dependencies": {
     "@tbd54566975/web5": "0.7.11"
