--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -56,9 +56,10 @@ jobs:
 
     - name: Install Netlify CLI
       run: npm install -g netlify-cli
-
+      
     - name: Deploy to Netlify
-      run: |
-        netlify deploy --dir ./site/build --prod \
-        --auth ${{ secrets.NETLIFY_AUTH_TOKEN }} \
-        --site ${{ secrets.NETLIFY_SITE_ID }}
+      env:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      run: netlify deploy --dir ./site/build --prod
+
