--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,8 +1,11 @@
 name: Test and Deploy to Netlify
 
 on:
-  push:
+  pull_request:
     branches:
+      - main
+  push:
+    branches-ignore:
       - main
 
 jobs:
