--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,10 @@ on:
   pull_request:
     branches:
       - main
+    types: [opened, synchronize, reopened]
   push:
+    branches:
+      - '**'
     branches-ignore:
       - main
   workflow_dispatch:
