--- a/site/package.json
+++ b/site/package.json
@@ -39,7 +39,9 @@
     "react-player": "^2.11.2",
     "redocusaurus": "^1.5.1",
     "tailwind-component-classes": "^2.0.4",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "stream-browserify": "^3.0.0",
+    "crypto-browserify": "^3.12.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.0",
