--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tbd54566975/web5": "0.7.11",
+    "node-fetch": "^3.3.2",
     "react-markdown": "^8.0.7"
   },
   "devDependencies": {
