--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tbd54566975/web5": "0.7.11",
+    "font-awesome": "^4.7.0",
+    "react-fontawesome": "^1.7.1",
     "react-markdown": "^8.0.7"
   },
   "devDependencies": {
