--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@web5/api": "0.8.0-alpha-20230825-adebf25",
-    "react-markdown": "^8.0.7"
+    "react-markdown": "8.0.7"
   },
   "devDependencies": {
-    "@vitest/browser": "^0.33.0",
-    "@vitest/coverage-istanbul": "^0.33.0",
-    "fake-indexeddb": "^4.0.2",
-    "vitest": "^0.33.0",
-    "webdriverio": "^8.13.13"
+    "@vitest/browser": "0.33.0",
+    "@vitest/coverage-istanbul": "0.33.0",
+    "fake-indexeddb": "4.0.2",
+    "vitest": "0.33.0",
+    "webdriverio": "8.13.13"
   }
 }
