--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
   },
   "dependencies": {
-    "@web5/api": "0.8.0",
-    "react-markdown": "^8.0.7"
+    "@web5/api": "0.8.0-alpha-20230825-adebf25",
+    "react-markdown": "8.0.7"
   },
   "devDependencies": {
-    "@vitest/browser": "^0.33.0",
-    "@vitest/coverage-istanbul": "^0.33.0",
-    "fake-indexeddb": "^4.0.2",
-    "vitest": "^0.33.0",
-    "webdriverio": "^8.13.13"
+    "@vitest/browser": "0.33.0",
+    "@vitest/coverage-istanbul": "0.33.0",
+    "fake-indexeddb": "4.0.2",
+    "vitest": "0.33.0",
+    "webdriverio": "8.13.13"
   }
 }
