Updating docs to be in parity with web5 v.08 (#688)
* test test with alpha change

* changing import statements to use new npm package

* fixing quickstart widget import

* updated code snippet images/animation

* rounding corners on static image

* remove alpha tag

* qs widget version update

* add polyfill plugin for webpack

* add browser import to code-snippet

* installing crypto-browserify and stream-browserify

* preparing for alpha release

* removing skip on widget

* Remove old lock files

---------

Co-authored-by: bobbilee19 <bobbileehartman@gmail.com>
Co-authored-by: Nick DeJesus <ndejesus1227@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
   },
   "dependencies": {
-    "@tbd54566975/web5": "0.7.11",
     "node-fetch": "^3.3.2",
-    "react-markdown": "^8.0.7",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "@web5/api": "0.8.1",
+    "react-markdown": "8.0.7"
   },
   "devDependencies": {
-    "@vitest/browser": "^0.33.0",
-    "@vitest/coverage-istanbul": "^0.33.0",
-    "fake-indexeddb": "^4.0.2",
-    "vitest": "^0.33.0",
-    "webdriverio": "^8.13.13"
+    "@vitest/browser": "0.33.0",
+    "@vitest/coverage-istanbul": "0.33.0",
+    "fake-indexeddb": "4.0.2",
+    "vitest": "0.33.0",
+    "webdriverio": "8.13.13"
   }
 }
