--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@tbd54566975/web5": "0.7.11",
     "node-fetch": "^3.3.2",
-    "react-markdown": "^8.0.7"
+    "react-markdown": "^8.0.7",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@vitest/browser": "^0.33.0",
