--- a/site/package.json
+++ b/site/package.json
@@ -45,7 +45,10 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.0",
-    "prop-types": "^15.8.1"
+    "docusaurus-plugin-typedoc": "^0.20.1",
+    "prop-types": "^15.8.1",
+    "typedoc": "^0.25.1",
+    "typedoc-plugin-markdown": "^3.16.0"
   },
   "browserslist": {
     "production": [
