--- a/examples/tutorials/todo-completed/package.json
+++ b/examples/tutorials/todo-completed/package.json
@@ -17,7 +17,8 @@
     "uuid": "9.0.0",
     "varint": "6.0.0",
     "vue": "^3.2.41",
-    "vue-toastification": "2.0.0-rc.5"
+    "vue-toastification": "2.0.0-rc.5",
+    "@web5/api": "0.8.1"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
