--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "start": "node extract-snippets && pnpm --filter site run start",
+    "start:feedback-server": "pnpm --filter feedback-server run start",
     "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
     "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
