Small overall improvements + server Readme

--- a/site/.env.example
+++ b/site/.env.example
@@ -4,4 +4,4 @@
 #DOC_SEARCH_APP_ID=<app_id>
 
 # Feedback Widget
-#FEEDBACK_WIDGET_API_URL=https://tbd-feedback-spreadsheet-server.vercel.app/api
+#FEEDBACK_WIDGET_API_URL=http://localhost:3001/api
