--- a/examples/tutorials/todo-completed/package.json
+++ b/examples/tutorials/todo-completed/package.json
@@ -32,7 +32,8 @@
     "postcss": "8.4.19",
     "rollup-plugin-polyfill-node": "0.12.0",
     "tailwindcss": "3.2.4",
-    "vite": "4.3.7"
+    "vite": "4.3.7",
+    "vite-plugin-node-stdlib-browser": "^0.2.1"
   },
   "browserslist": [
     "last 2 Chrome versions",
