add script to add web5 dependency to every package inside tutorials dir

--- a/examples/tutorials/book-reviews/package.json
+++ b/examples/tutorials/book-reviews/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@web5/api": "^0.8.1"
+    "@web5/api": "0.8.1"
   },
   "type": "module"
 }
