--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "start": "node extract-snippets && pnpm --filter site run start",
-    "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
-    "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
-    "start:widget": "pnpm --filter web5-quickstart-widgets start",
-    "build": "node extract-snippets && pnpm --filter site run build",
-    "clear": "pnpm --filter site run clear",
-    "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
-    "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
-  },
+"scripts": {
+  "preinstall": "node propagateWeb5.js && npx only-allow pnpm",
+  "start": "node extract-snippets && pnpm --filter site run start",
+  "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
+  "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
+  "start:widget": "pnpm --filter web5-quickstart-widgets start",
+  "build": "node extract-snippets && pnpm --filter site run build",
+  "clear": "pnpm --filter site run clear",
+  "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
+  "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
+},
   "dependencies": {
     "node-fetch": "^3.3.2",
     "react-slick": "^0.29.0",
