--- a/package.json
+++ b/package.json
@@ -1,27 +1,1 @@
-{
-"scripts": {
-  "preinstall": "node propagateWeb5.js && npx only-allow pnpm",
-  "start": "node extract-snippets && pnpm --filter site run start",
-  "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
-  "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
-  "start:widget": "pnpm --filter web5-quickstart-widgets start",
-  "build": "node extract-snippets && pnpm --filter site run build",
-  "clear": "pnpm --filter site run clear",
-  "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
-  "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
-},
-  "dependencies": {
-    "node-fetch": "^3.3.2",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "@web5/api": "0.8.1",
-    "react-markdown": "8.0.7"
-  },
-  "devDependencies": {
-    "@vitest/browser": "0.33.0",
-    "@vitest/coverage-istanbul": "0.33.0",
-    "fake-indexeddb": "4.0.2",
-    "vitest": "0.33.0",
-    "webdriverio": "8.13.13"
-  }
-}
+{"scripts":{"preinstall":"node propagateWeb5.js && npx only-allow pnpm","start":"node extract-snippets && pnpm --filter site run start","start:tutorial-todo-starter":"pnpm --filter todo-starter run dev","start:tutorial-todo-completed":"pnpm --filter todo-completed run dev","start:widget":"pnpm --filter web5-quickstart-widgets start","build":"node extract-snippets && pnpm --filter site run build","clear":"pnpm --filter site run clear","test":"node extract-snippets && pnpm vitest run --config vite.config.ts","test:watch":"node extract-snippets && pnpm vitest --config vite.config.ts --watch"},"dependencies":{"@web5/api":"0.8.1","node-fetch":"^3.3.2","pnpm":"^8.8.0","react-markdown":"8.0.7","react-slick":"^0.29.0","slick-carousel":"^1.8.1"},"devDependencies":{"@vitest/browser":"0.33.0","@vitest/coverage-istanbul":"0.33.0","fake-indexeddb":"4.0.2","vitest":"0.33.0","webdriverio":"8.13.13"}}
