--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -21,6 +21,7 @@
     "vitest": "^0.33.0"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6"
+    "@heroicons/vue": "^1.0.6",
+    "@web5/api": "0.8.1"
   }
 }
