Feedback Widget Docs and Testing Instructions

--- a/apps/feedback-server/.env.example
+++ b/apps/feedback-server/.env.example
@@ -1,4 +1,4 @@
-SERVER_SECRET=<server-secret: `openssl rand -base64 32`>
+SERVER_SECRET=yourSuperSecretForTheServer
 SERVER_ALLOWED_ORIGINS='http://localhost:3000,https://developer.tbd.website'
 
 # postgres db config
