--- a/apps/feedback-server/package.json
+++ b/apps/feedback-server/package.json
@@ -14,9 +14,12 @@
     "csrf-csrf": "^3.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pino": "^8.15.6",
+    "pino-http": "^8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.3"
   }
 }
