--- a/apps/feedback-server/package.json
+++ b/apps/feedback-server/package.json
@@ -21,10 +21,8 @@
     "pino-http": "^8.5.0"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^0.34.6",
     "nodemon": "^3.0.1",
     "pino-pretty": "^10.2.3",
-    "supertest": "^6.3.3",
-    "vitest": "^0.34.6"
+    "supertest": "^6.3.3"
   }
 }
