--- a/apps/feedback-server/package.json
+++ b/apps/feedback-server/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "coverage": "vitest run --coverage",
     "dev": "node_modules/nodemon/bin/nodemon.js --watch . server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "vitest"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -14,9 +16,13 @@
     "csrf-csrf": "^3.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pino": "^8.15.6",
+    "pino-http": "^8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.3",
+    "supertest": "^6.3.3"
   }
 }
