--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -17,8 +17,7 @@
     "@types/node": "^18.16.19",
     "nuxt": "^3.6.5",
     "sass": "^1.63.6",
-    "sass-loader": "^13.3.2",
-    "vitest": "^0.33.0"
+    "sass-loader": "^13.3.2"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
