--- a/examples/tutorials/dinger-completed/package.json
+++ b/examples/tutorials/dinger-completed/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-app",
+  "name": "dinger-completed",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
