Run all example tutorials locally

--- a/examples/tutorials/shared-todo-completed/package.json
+++ b/examples/tutorials/shared-todo-completed/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web5-shared-todo-app",
+  "name": "shared-todo-completed",
   "private": true,
   "scripts": {
     "build": "nuxt build",
