--- a/examples/tutorials/book-reviews/package.json
+++ b/examples/tutorials/book-reviews/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "book-reviews.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node book-reviews.js"
   },
   "author": "",
   "license": "ISC",
