--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "start:feedback-server": "pnpm --filter feedback-server run start",
   "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
   "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
+  "start:tutorial-book-reviews": "pnpm --filter book-reviews run start",
+  "start:tutorial-dinger-starter": "pnpm --filter dinger-starter run dev",
+  "start:tutorial-dinger-completed": "pnpm --filter dinger-completed run dev",
+  "start:tutorial-shared-todo-starter": "pnpm --filter shared-todo-starter run dev",
+  "start:tutorial-shared-todo-completed": "pnpm --filter shared-todo-completed run dev",
   "start:widget": "pnpm --filter web5-quickstart-widgets start",
   "build": "node extract-snippets && pnpm --filter site run build",
   "clear": "pnpm --filter site run clear",
