--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -20,6 +20,6 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
-    "@web5/api": "0.8.1"
+    "@web5/api": "0.8.2-alpha-20231101-b865b10"
   }
 }
