--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-"scripts": {
-  "preinstall": "node propagateWeb5.js && npx only-allow pnpm",
-  "start": "node extract-snippets && pnpm --filter site run start",
-  "start:feedback-server": "pnpm --filter feedback-server run start",
-  "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
-  "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
-  "start:tutorial-book-reviews": "pnpm --filter book-reviews run start",
-  "start:tutorial-dinger-starter": "pnpm --filter dinger-starter run dev",
-  "start:tutorial-dinger-completed": "pnpm --filter dinger-completed run dev",
-  "start:tutorial-shared-todo-starter": "pnpm --filter shared-todo-starter run dev",
-  "start:tutorial-shared-todo-completed": "pnpm --filter shared-todo-completed run dev",
-  "start:widget": "pnpm --filter web5-quickstart-widgets start",
-  "build": "node extract-snippets && pnpm --filter site run build",
-  "clear": "pnpm --filter site run clear",
-  "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
-  "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
-},
+  "scripts": {
+    "preinstall": "node propagateWeb5.js && npx only-allow pnpm",
+    "start": "node extract-snippets && pnpm --filter site run start",
+    "start:feedback-server": "pnpm --filter feedback-server run start",
+    "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
+    "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
+    "start:tutorial-book-reviews": "pnpm --filter book-reviews run start",
+    "start:tutorial-dinger-starter": "pnpm --filter dinger-starter run dev",
+    "start:tutorial-dinger-completed": "pnpm --filter dinger-completed run dev",
+    "start:tutorial-shared-todo-starter": "pnpm --filter shared-todo-starter run dev",
+    "start:tutorial-shared-todo-completed": "pnpm --filter shared-todo-completed run dev",
+    "start:widget": "pnpm --filter web5-quickstart-widgets start",
+    "build": "node extract-snippets && pnpm --filter site run build",
+    "clear": "pnpm --filter site run clear",
+    "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
+    "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@web5/api": "0.8.1",
+    "@web5/api": "0.8.2-alpha-20231101-b865b10",
     "font-awesome": "^4.7.0",
+    "node-fetch": "^3.3.2",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^8.0.7",
-    "node-fetch": "^3.3.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
