--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@vitest/browser": "0.33.0",
     "@vitest/coverage-istanbul": "0.33.0",
     "fake-indexeddb": "4.0.2",
+    "playwright": "^1.39.0",
+    "start-server-and-test": "^2.0.2",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
