--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@web5/api": "0.8.1",
     "font-awesome": "^4.7.0",
+    "node-fetch": "^3.3.2",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^8.0.7",
-    "node-fetch": "^3.3.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
@@ -32,6 +32,8 @@
     "@vitest/browser": "0.33.0",
     "@vitest/coverage-istanbul": "0.33.0",
     "fake-indexeddb": "4.0.2",
+    "playwright": "^1.39.0",
+    "start-server-and-test": "^2.0.2",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
