setting up playwright tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "build": "node extract-snippets && pnpm --filter site run build",
   "clear": "pnpm --filter site run clear",
   "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
-  "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
+  "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch",
+  "test:browser": "pnpm -r test:browser"
 },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
