--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Start dwn-server container
+        run: docker-compose up -d dwn-server
+
+      - name: Wait for dwn-server to be ready
+        run: until curl -sf http://localhost:3000/health; do echo -n .; sleep .1; done
+
       - name: Run tests
         run: pnpm test
 
